# FallingBlocks

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  app.rc  vcpkg.json
data/: Font_Default.yaml  Prototype_DefaultBackgroundImage.yaml  Prototype_DefaultBall.yaml  Prototype_DefaultBallSpawnBlock.yaml  Prototype_DefaultBlock.yaml  Prototype_DefaultGameOverUI.yaml  Prototype_DefaultLoadingScreen.yaml  Prototype_DefaultMainMenuUI.yaml  Prototype_DefaultPaddle.yaml  Prototype_DefaultScoreUI.yaml  Renderable_Color.yaml  Scene_GameOver.yaml  Scene_Level1.yaml  (+10 more)
src/: .clang-format  .clang-tidy  Application.cpp  Application.hpp  CMakeLists.txt  GlobalSubSystemStack.cpp  GlobalSubSystemStack.hpp  ResourceTypes.hpp  main.cpp
src/audio/: AudioSubSystem.cpp  AudioSubSystem.hpp  CMakeLists.txt
src/audio/win/: AudioClient.cpp  AudioClient.hpp  CMakeLists.txt
src/engine/: Actor.cpp  Actor.hpp  CMakeLists.txt  ColorRenderableResource.cpp  ColorRenderableResource.hpp  DrawableRegistry.cpp  DrawableRegistry.hpp  FontResource.cpp  FontResource.hpp  Localisation.cpp  Localisation.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceRef.hpp  ResourceSentinelManager.cpp  ResourceSentinelManager.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  Settings.cpp  Settings.hpp  TextureResource.cpp  TextureResource.hpp  TickRegistry.cpp  TickRegistry.hpp  Timer.cpp  Timer.hpp
src/game/: Background.cpp  Background.hpp  Ball.cpp  Ball.hpp  BallSpawnBlock.cpp  BallSpawnBlock.hpp  Block.cpp  Block.hpp  BlocksScene.cpp  BlocksScene.hpp  Button.cpp  Button.hpp  CMakeLists.txt  CameraActor.cpp  CameraActor.hpp  GameOverUI.cpp  GameOverUI.hpp  LoadingScreen.cpp  LoadingScreen.hpp  MainMenuUI.cpp  MainMenuUI.hpp  Paddle.cpp  Paddle.hpp  ScoreUI.cpp  ScoreUI.hpp  StaticImage.cpp  StaticImage.hpp  StaticText.cpp  StaticText.hpp  TestText.cpp  TestText.hpp  UIActor.cpp  UIActor.hpp
src/game/resource/: CMakeLists.txt  DefaultFont.cpp  DefaultFont.hpp
src/game/scenes/: CMakeLists.txt  FromResource.cpp  FromResource.hpp  GameOver.cpp  GameOver.hpp  Level1.cpp  Level1.hpp  Level2.cpp  Level2.hpp  LevelConsts.hpp  MainMenu.cpp  MainMenu.hpp
src/input/: CMakeLists.txt  InputHandler.cpp  InputHandler.hpp  InputSubSystem.cpp  InputSubSystem.hpp
src/loader/: CMakeLists.txt  Config.cpp  Config.hpp  Image.hpp  LoadImage.cpp  LoadImage.hpp  Locale.cpp  Locale.hpp
src/loader/font/: CMakeLists.txt  Font.cpp  Font.hpp
src/loader/font/test/: CMakeLists.txt  font.cpp
src/loader/image/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Png.cpp  Png.hpp
src/loader/image/test/: CMakeLists.txt  bitmap.cpp  png.cpp
src/loader/test/: CMakeLists.txt  config.cpp
src/log/: CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerBackend.hpp  StdoutLoggerBackend.cpp  StdoutLoggerBackend.hpp
src/math/: CMakeLists.txt  vec.hpp
src/physics/: CMakeLists.txt  PhysicsScene.cpp  PhysicsScene.hpp  RectCollider.cpp  RectCollider.hpp
src/render/: CMakeLists.txt  Font.cpp  Font.hpp  ForwardAllocateMappedBuffer.cpp  ForwardAllocateMappedBuffer.hpp  GLFWApplication.cpp  GLFWApplication.h  GLFWApplication.hpp  Quad.cpp  Quad.hpp  RenderSubSystem.cpp  RenderSubSystem.hpp  RenderableObject.cpp  RenderableObject.hpp  RenderableQuad.cpp  RenderableQuad.hpp  Simple2DCamera.cpp  Simple2DCamera.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDebugMessenger.cpp  VulkanDebugMessenger.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDeviceMemory.cpp  VulkanDeviceMemory.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanGraphicsDevice.hpp  VulkanGraphicsPipeline.cpp  (+35 more)
src/render/glfw_wrapper/: CMakeLists.txt  Window.cpp  Window.h  Window.hpp
src/render/renderables/: CMakeLists.txt  RenderableColor2D.cpp  RenderableColor2D.hpp  RenderableFont.cpp  RenderableFont.hpp  RenderableTex2D.cpp  RenderableTex2D.hpp
src/render/resource/: CMakeLists.txt  ShaderProgramManager.cpp  ShaderProgramManager.hpp  TextureManager.cpp  TextureManager.hpp
src/render/shaders/: CMakeLists.txt  Col2DShader.cpp  Col2DShader.hpp  FontShader.cpp  FontShader.hpp  Tex2DShader.cpp  Tex2DShader.hpp  UVVertex.cpp  UVVertex.hpp
src/render/vulkan/: CMakeLists.txt  CommandBufferBuilder.cpp  CommandBufferBuilder.hpp  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.hpp  FenceBuilder.cpp  FenceBuilder.hpp  FrameBufferBuilder.cpp  FrameBufferBuilder.hpp  ImageViewBuilder.cpp  ImageViewBuilder.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  SemaphoreBuilder.cpp  SemaphoreBuilder.hpp  SurfaceBuilder.cpp  SurfaceBuilder.hpp  UniqueHandle.hpp  UniqueHandleDeleters.cpp  UniqueHandleDeleters.hpp
src/serialization/: CMakeLists.txt  Serialization.hpp
src/serialization/yaml/: CMakeLists.txt  YAMLParser.cpp  YAMLParser.hpp  YAMLSerializationProvider.cpp  YAMLSerializationProvider.hpp  YAMLTokenizer.cpp  YAMLTokenizer.hpp
src/serialization/yaml/test/: CMakeLists.txt  YAMLParserTest.cpp  YAMLSerializationTest.cpp  YAMLTokenizerTest.cpp
src/shaders/: colFragment.glsl  colVertex.glsl  fontFragment.glsl  fontVertex.glsl  fragment.glsl  vertex.glsl
src/ui/: CMakeLists.txt  Layout.cpp  Layout.hpp  UIButton.cpp  UIButton.hpp  UIObject.cpp  UIObject.hpp  UIRect.cpp  UIRect.hpp  UIText.cpp  UIText.hpp
src/util/: Arena.cpp  Arena.hpp  AtomicCircularBufferQueue.hpp  BlockForwardAllocatedArena.cpp  BlockForwardAllocatedArena.hpp  CMakeLists.txt  Generator.hpp  IndexedResourceStorage.hpp  NotNull.hpp  Registry.hpp  Synchronized.hpp  TaggedVariant.hpp  TypeErasedUniquePtr.hpp  array.hpp  basic_math.hpp  debug.hpp  file.cpp  file.hpp  meta_utils.hpp  portability.hpp  raii_helpers.hpp  resettable.hpp  storage.hpp  string.hpp  unicode.cpp  unicode.hpp  vec_generators.hpp  zlib.cpp  zlib.hpp
src/util/test/: AtomicCircularBufferQueue.cpp  CMakeLists.txt  generator.cpp  string.cpp
(+3 files in other folders)
